--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,12 @@
 
 /* Your CSS Code here. */
+.accio{
+	width : 150px;
+	background : rgb(0,0,0);
+}
+.hello-accio{
+	color : white;
+	padding : 10px;
+	margin-left : 32px;
+	
+}
